Fix alignment for section header frames

--- a/source/patterns/components/section-heading/section-heading.scss
+++ b/source/patterns/components/section-heading/section-heading.scss
@@ -60,11 +60,11 @@
     /*----------  Framed right  ----------*/
     &.cu-section-heading--framed-right {
       &::before {
-        left: calc(100% - #{$frame-width});
+        left: calc(100% - #{$frame-width} - #{$frame-thickness});
       }
 
       &::after {
-        left: 100%;
+        left: calc(100% - #{$frame-thickness});
       }
     }
   }
